--- a/html/checkout.html
+++ b/html/checkout.html
@@ -4,9 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bakersa | Checkout</title>
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/checkout.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&family=Vollkorn:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-    
+    <!-- NAVBAR -->
+    <nav>
+        <div class="navbar-title">
+          <img
+            src="../src/icons/hamburger-menu-icon.png"
+            alt="Menu"
+            id="hamburger-menu"
+          />
+          <div class="nav-item logo-title">
+            <img src="../src/logo/logo-banner.png" alt="Logo" id="logo-banner" />
+          </div>
+        </div>
+  
+        <div id="navbar-expanded">
+          <hr />
+          <a href="home.html">
+            <div class="nav-item" id="nav-home">
+              <img src="../src/icons/home-icon.png" alt="Home" />
+              <p>Home</p>
+            </div>
+          </a>
+  
+          <div class="dropdown">
+            <span class="nav-item">
+              <p>&nbsp; Products ▼ &nbsp;</p>
+            </span>
+  
+            <div class="products">
+              <hr />
+              <a href="classic.html">
+                <div class="nav-item" id="nav-classic">
+                  <img src="../src/icons/classic-icon.png" alt="Classic" />
+                  <p>Classic Bread</p>
+                </div>
+              </a>
+  
+              <hr />
+              <a href="custom.html">
+                <div class="nav-item" id="nav-custom">
+                  <img src="../src/icons/custom-icon.png" alt="Custom" />
+                  <p>Custom Cake</p>
+                </div>
+              </a>
+            </div>
+          </div>
+  
+          <hr />
+          <a href="#">
+            <div class="nav-item hoverable" id="nav-checkout">
+              <img src="../src/icons/checkout-icon.png" alt="Checkout" />
+              <p>Checkout</p>
+            </div>
+          </a>
+  
+          <hr />
+        </div>
+    </nav>
+
+    <!-- MAIN -->
+    <main>
+        <div class="cart-container">
+            <div class="title">
+                <h2>Cart</h2>
+                <p>CLEAR</p>
+            </div>
+            <div id="carts">
+            </div>
+            <p id="total"></p>
+        </div>
+        <hr>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>&copy; 2021 Bakersa</p>
+        <div class="socmed">
+          <a href="https://www.instagram.com/"
+            ><img src="../src/icons/instagram.png" alt="Instagram"
+          /></a>
+          <a href="https://facebook.com"
+            ><img src="../src/icons/facebook.png" alt="Facebook"
+          /></a>
+          <a href="https://twitter.com">
+            <img src="../src/icons/twitter.png" alt="Twitter"
+          /></a>
+        </div>
+      </footer>
+    <script src="../js/base.js"></script>
+    <script src="../js/checkout.js"></script>
 </body>
 </html>
