--- a/html/detail.html
+++ b/html/detail.html
@@ -15,6 +15,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <div class="overlay-dialog" onclick="hideDialog()">
+      <div class="dialog">
+        <p>✔️ Your item(s): Roti 1 x1 are added to the cart successfully<br> with subtotal of Rp 20.000,00.</p>
+        <div class="dialog-buttons">
+          <button id="buy-another-bread">Buy another bread</button>
+          <button id="go-to-checkout-page">Go to checkout page</button>
+        </div>
+      </div>
+    </div>
+
       <!-- NAVBAR -->
     <nav>
       <div class="navbar-title">
