--- a/html/custom.html
+++ b/html/custom.html
@@ -16,6 +16,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <div class="overlay-dialog">
+      <div class="dialog">
+        <p id="dialog-message"></p>
+        <div class="dialog-buttons">
+          <button id="make-another-cake">Make another cake</button>
+          <button id="go-to-checkout-page">Go to checkout page</button>
+        </div>
+      </div>
+    </div>
+
     <!-- NAVIGATION BAR -->
     <nav>
       <div class="navbar-title">
