--- a/html/detail.html
+++ b/html/detail.html
@@ -15,9 +15,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="overlay-dialog" onclick="hideDialog()">
+    <div class="overlay-dialog">
       <div class="dialog">
-        <p>✔️ Your item(s): Roti 1 x1 are added to the cart successfully<br> with subtotal of Rp 20.000,00.</p>
+        <p id="dialog-message"></p>
         <div class="dialog-buttons">
           <button id="buy-another-bread">Buy another bread</button>
           <button id="go-to-checkout-page">Go to checkout page</button>
@@ -95,7 +95,7 @@
             </div>
             <h3>Subtotal</h3>
             <p id="subtotal">Rp 0,00</p>
-            <button id="add-to-cart">Add to Cart</button>
+            <button id="add-to-cart" class="disabled-button">Add to Cart</button>
           </div>
         </div>
     </main> 
