--- a/html/checkout.html
+++ b/html/checkout.html
@@ -15,6 +15,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+  <div class="overlay-dialog">
+    <div class="dialog">
+      <p id="dialog-message"></p>
+      <div class="dialog-buttons">
+        <button id="cancel-clear-cart">No</button>
+        <button id="yes-clear-cart">Yes</button>
+      </div>
+    </div>
+  </div>
+
     <!-- NAVBAR -->
     <nav>
         <div class="navbar-title">
@@ -78,7 +88,7 @@
         <div class="cart-container">
             <div class="title">
                 <h2>Cart</h2>
-                <p>CLEAR</p>
+                <button id="clear-cart">Clear</button>
             </div>
             <div id="carts">
             </div>
