--- a/html/detail.html
+++ b/html/detail.html
@@ -40,7 +40,7 @@
 
       <div id="navbar-expanded">
         <hr />
-        <a href="index.html">
+        <a href="../index.html">
           <div class="nav-item" id="nav-home">
             <img src="../src/icons/home-icon.png" alt="Home" />
             <p>Home</p>
