--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bakersa | Home</title>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/breads.css">
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&family=Vollkorn:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -157,6 +157,6 @@
     </footer>
 
     <script src="js/base.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
