--- a/html/checkout.html
+++ b/html/checkout.html
@@ -19,8 +19,9 @@
     <div class="dialog">
       <p id="dialog-message"></p>
       <div class="dialog-buttons">
-        <button id="cancel-clear-cart">No</button>
+        <button id="cancel">No</button>
         <button id="yes-clear-cart">Yes</button>
+        <button id="yes-delete-item">Yes</button>
       </div>
     </div>
   </div>
