--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             class="arrow"
             id="arrow-left"
           />
-          <img src="https://picsum.photos/400/200" alt="" class="news-image" />
-          <img src="https://picsum.photos/600/300" alt="" class="news-image" />
-          <img src="https://picsum.photos/800/400" alt="" class="news-image" />
-          <img src="https://picsum.photos/200/100" alt="" class="news-image" />
+          <img src="src/news/news1.jpg" alt="" class="news-image" />
+          <img src="src/news/news2.jpg" alt="" class="news-image" />
+          <img src="https://picsum.photos/1200/600" alt="" class="news-image" />
+          <img src="https://picsum.photos/1400/700" alt="" class="news-image" />
           <img
             src="src/icons/arrow-right-outline.png"
             alt="arrow-right"
