restructure nav and footer

--- a/html/custom.html
+++ b/html/custom.html
@@ -27,62 +27,7 @@
     </div>
 
     <!-- NAVIGATION BAR -->
-    <nav>
-      <div class="navbar-title">
-        <img
-          src="../src/icons/hamburger-menu-icon.png"
-          alt="Menu"
-          id="hamburger-menu"
-        />
-        <div class="nav-item logo-title">
-          <img src="../src/logo/logo-banner.png" alt="Logo" id="logo-banner" />
-        </div>
-      </div>
-
-      <div id="navbar-expanded">
-        <hr />
-        <a href="../index.html">
-          <div class="nav-item" id="nav-home">
-            <img src="../src/icons/home-icon.png" alt="Home" />
-            <p>Home</p>
-          </div>
-        </a>
-
-        <div class="dropdown">
-          <span class="nav-item">
-            <p>&nbsp; Products ▼ &nbsp;</p>
-          </span>
-
-          <div class="products">
-            <hr />
-            <a href="classic.html">
-              <div class="nav-item" id="nav-classic">
-                <img src="../src/icons/classic-icon.png" alt="Classic" />
-                <p>Classic Bread</p>
-              </div>
-            </a>
-
-            <hr />
-            <a href="#">
-              <div class="nav-item" id="nav-custom">
-                <img src="../src/icons/custom-icon.png" alt="Custom" />
-                <p>Custom Cake</p>
-              </div>
-            </a>
-          </div>
-        </div>
-
-        <hr />
-        <a href="checkout.html">
-          <div class="nav-item hoverable" id="nav-checkout">
-            <img src="../src/icons/checkout-icon.png" alt="Checkout" />
-            <p>Checkout</p>
-          </div>
-        </a>
-
-        <hr />
-      </div>
-    </nav>
+    <div id="nav"></div>
 
     <!-- HEADER -->
     <header>
@@ -197,20 +142,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
-      <p>&copy; 2021 Bakersa</p>
-      <div class="socmed">
-        <a href="https://www.instagram.com/"
-          ><img src="../src/icons/instagram.png" alt="Instagram"
-        /></a>
-        <a href="https://facebook.com"
-          ><img src="../src/icons/facebook.png" alt="Facebook"
-        /></a>
-        <a href="https://twitter.com">
-          <img src="../src/icons/twitter.png" alt="Twitter"
-        /></a>
-      </div>
-    </footer>
+    <div id="footer"></div>
+    
     <script src="../js/base.js"></script>
     <script src="../js/custom.js"></script>
   </body>
