--- a/html/checkout.html
+++ b/html/checkout.html
@@ -15,7 +15,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-
     <!-- OVERLAY DIALOG -->
     <div class="overlay-dialog">
       <div class="dialog">
@@ -41,7 +40,8 @@
         <div id="carts"></div>
         <p id="total"></p>
       </div>
-      <hr id="cart-customer-divider"/>
+
+      <hr id="cart-customer-divider" />
 
       <div id="customer-info">
         <div class="title">
@@ -62,7 +62,7 @@
             <label for="email-input">Email</label>
             <input
               type="text"
-              placeholder="someone@example.com..."
+              placeholder="someone@example.com"
               id="email-input"
             />
             <div class="errormsg">
@@ -70,7 +70,11 @@
             </div>
 
             <label for="phone-input">Phone</label>
-            <input type="tel" placeholder="082345678912..." id="phone-input" />
+            <input
+              type="tel"
+              placeholder="0-XXXX-XXXX-XXX"
+              id="phone-input"
+            />
             <div class="errormsg">
               <p id="errormsg-phone"></p>
             </div>
