refactoring custom cake

--- a/html/custom.html
+++ b/html/custom.html
@@ -16,6 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    
     <div class="overlay-dialog">
       <div class="dialog">
         <p id="dialog-message"></p>
@@ -110,6 +111,7 @@
           </div>
           <div class="input-message">
             <input type="text" placeholder="Add messages here..." id="cake-input-message">
+            <p id="error-msg">⚠ The message has to be maximum 3 words each maximum 12 characters</p>
             <p>Pick the color:</p>
             <input type="color" id="cake-input-message-color">
           </div>
