--- a/html/checkout.html
+++ b/html/checkout.html
@@ -70,11 +70,7 @@
             </div>
 
             <label for="phone-input">Phone</label>
-            <input
-              type="tel"
-              placeholder="0-XXXX-XXXX-XXX"
-              id="phone-input"
-            />
+            <input type="tel" placeholder="0-XXXX-XXXX-XXX" id="phone-input" />
             <div class="errormsg">
               <p id="errormsg-phone"></p>
             </div>
@@ -104,8 +100,10 @@
             <label for="delivery-select">Delivery Time</label>
             <select name="delivery-select" id="delivery-select" required>
               <option value="-1" disabled selected hidden>-</option>
-              <option value="1">2</option>
-              <option value="2">3</option>
+              <option value="1">10.30</option>
+              <option value="2">13.00</option>
+              <option value="3">15.00</option>
+              <option value="4">17.00</option>
             </select>
             <div class="errormsg">
               <p id="errormsg-delivery"></p>
