--- a/html/custom.html
+++ b/html/custom.html
@@ -41,6 +41,10 @@
 
     <!-- MAIN -->
     <main>
+        <div id="overlay-canvas">
+          <canvas id="canvas"></canvas>
+          <img src="/src/logo/logo-fill.png" alt="" id="bouncing-logo" />
+        </div>
         <!-- id buat jquery search buat nambah class section-active -->
         <section id="choose-flavor" > 
             <h2>Choose the Flavor</h2>
