--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       <p>&copy; 2021 Bakersa</p>
       <div class="socmed">
         <a href="https://www.instagram.com/"
-          ><img src="/src/icons/instagram.png" alt="Instagram"
+          ><img src="src/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="https://facebook.com"
-          ><img src="/src/icons/facebook.png" alt="Facebook"
+          ><img src="src/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="https://twitter.com">
-          <img src="/src/icons/twitter.png" alt="Twitter"
+          <img src="src/icons/twitter.png" alt="Twitter"
         /></a>
       </div>
     </footer>
