--- a/html/custom.html
+++ b/html/custom.html
@@ -97,7 +97,7 @@
     <main>
         <div id="overlay-canvas">
           <canvas id="canvas"></canvas>
-          <img src="/src/logo/logo-fill.png" alt="" id="bouncing-logo" />
+          <img src="../src/logo/logo-fill.png" alt="" id="bouncing-logo" />
         </div>
         <!-- id buat jquery search buat nambah class section-active -->
         <section id="choose-flavor" > 
@@ -216,7 +216,7 @@
         /></a>
       </div>
     </footer>
-    
+
     <script src="../js/base.js"></script>
     <script src="../js/custom.js"></script>
   </body>
