subtotal di detail

--- a/html/detail.html
+++ b/html/detail.html
@@ -90,6 +90,7 @@
             <button onclick="updateAmount('decrement')">-</button>
             <p id="stock">0</p>
             <button onclick="updateAmount('increment')">+</button>
+            <p id="subtotal"></p>
           </div>
           <button id="add-to-cart" class="disabled-button">Add to Cart</button>
         </div>
