--- a/html/classic.html
+++ b/html/classic.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Bakersa, included on Cake Boss, is known for our traditional classic breads and cakes. Our pastry specialists work with the goal that the portion of bread you purchase toward the beginning of the day is crisp out of the stove!"
+    />
     <title>Bakersa | Classic Bread</title>
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/breads.css" />
     <link rel="stylesheet" href="../css/classic.css" />
+    <link rel="icon" type="image/png" href="../src/logo/logo-fill.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;700&family=Vollkorn:wght@400;700&display=swap"
