--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Bakersa, included on Cake Boss, is known for our traditional classic breads and cakes. Our pastry specialists work with the goal that the portion of bread you purchase toward the beginning of the day is crisp out of the stove!"
     />
+    <meta property="og:image" content="src/logo/logo-fill.png">
     <title>Bakersa | Home</title>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/breads.css" />
