--- a/html/checkout.html
+++ b/html/checkout.html
@@ -121,7 +121,7 @@
 
             <label for="email-input">Email</label>
             <input
-              type="text"
+              type="email"
               placeholder="someone@example.com"
               id="email-input"
             />
