--- a/html/classic.html
+++ b/html/classic.html
@@ -84,7 +84,7 @@
       <div class="overlay">
         <h1>Our Breads</h1>
         <h2>~ Our Tastiest Breads ~</h2>
-        <h3>Made with Toughtful Process</h3>
+        <h3>Made with Thoughtful Process</h3>
       </div>
     </header>
 
